--- a/package.json
+++ b/package.json
@@ -1,10 +1,24 @@
 {
   "name": "react-contest",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "A simple tool to A/B/(C) test components",
-  "main": "index.js",
+  "jsnext:main": "dist/holen.es.js",
+  "module": "dist/holen.es.js",
+  "main": "dist/holen.js",
+  "umd:main": "dist/holen.umd.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm-run-all clean -p rollup -p minify:* -s size",
+    "clean": "rimraf dist",
+    "test": "standard src test && jest --coverage",
+    "test:watch": "jest --watch",
+    "rollup": "rollup -c",
+    "minify:cjs": "uglifyjs $npm_package_main -cm toplevel -o $npm_package_main -p relative --in-source-map ${npm_package_main}.map --source-map ${npm_package_main}.map",
+    "minify:umd": "uglifyjs $npm_package_umd_main -cm -o $npm_package_umd_main -p relative --in-source-map ${npm_package_umd_main}.map --source-map ${npm_package_umd_main}.map",
+    "size": "echo \"Gzipped Size: $(strip-json-comments --no-whitespace $npm_package_main | gzip-size)\"",
+    "release": "npm run test && npm run build && npm version patch && npm publish && git push --tags"
   },
   "repository": {
     "type": "git",
@@ -19,5 +33,29 @@
   "bugs": {
     "url": "https://github.com/peterpme/react-contest/issues"
   },
-  "homepage": "https://github.com/peterpme/react-contest#readme"
+  "eslintConfig": {
+    "extends": "standard",
+    "parser": "babel-eslint"
+  },
+  "standard": {
+    "parser": "babel-eslint",
+    "ignore": [
+      "/dist/"
+    ]
+  },
+  "homepage": "https://github.com/peterpme/react-contest#readme",
+  "devDependencies": {
+    "babel-eslint": "^7.2.3",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.4.0",
+    "gzip-size-cli": "^2.0.0",
+    "npm-run-all": "^4.0.2",
+    "pretty-bytes-cli": "^2.0.0",
+    "rimraf": "^2.6.1",
+    "rollup": "^0.41.6",
+    "rollup-plugin-babel": "^2.7.1",
+    "standard": "^10.0.2",
+    "strip-json-comments-cli": "^1.0.1",
+    "uglify-js": "^2.8.22"
+  }
 }
