--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
   "scripts": {
     "build": "npm-run-all clean -p rollup -p minify:* -s size",
     "clean": "rimraf dist",
-    "test": "standard src test && jest --coverage",
-    "test:watch": "jest --watch",
     "rollup": "rollup -c",
     "minify:cjs": "uglifyjs $npm_package_main -cm toplevel -o $npm_package_main -p relative --in-source-map ${npm_package_main}.map --source-map ${npm_package_main}.map",
     "minify:umd": "uglifyjs $npm_package_umd_main -cm -o $npm_package_umd_main -p relative --in-source-map ${npm_package_umd_main}.map --source-map ${npm_package_umd_main}.map",
@@ -48,6 +46,7 @@
     "babel-eslint": "^7.2.3",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.4.0",
+    "babel-preset-stage-2": "^6.24.1",
     "gzip-size-cli": "^2.0.0",
     "npm-run-all": "^4.0.2",
     "pretty-bytes-cli": "^2.0.0",
