--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "rollup": "^0.41.6",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-buble": "^0.15.0",
+    "rollup-plugin-commonjs": "^8.0.2",
     "standard": "^10.0.2",
     "strip-json-comments-cli": "^1.0.1",
     "uglify-js": "^2.8.22"
