--- a/package.json
+++ b/package.json
@@ -56,12 +56,15 @@
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-buble": "^0.15.0",
     "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-node-resolve": "^3.0.0",
     "standard": "^10.0.2",
     "strip-json-comments-cli": "^1.0.1",
     "uglify-js": "^2.8.22"
   },
   "peerDependencies": {
-    "js-cookie": "^2.1.4",
     "react": ">=0.14"
+  },
+  "dependencies": {
+    "js-cookie": "^2.1.4"
   }
 }
